src/components/ui/product-card/ProductCard.module.scss
.listItem {
  flex: 1 1 calc(267px - 16px);
  box-sizing: border-box;
  border: 1px solid var(--black-02);
  cursor: pointer;
  transition: background-color .2s ease-out 0s;

  &:hover {
    background-color: var(--black-005);
  }
}

.link {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100%;
  height: 100%;
  padding: clamp(10px, 1.5vw, 20px);
}

.imgCnt {
  width: 100%;
  max-height: 205px;
  height: 100%;
}

.img {
  object-fit: contain;
  width: 100%;
  height: 100%;
}

.name {
  color: var(--black);
  font-size: 14px;
  font-weight: 600;
  margin-top: 10px;
}

.divider {
  height: 1px;
  width: 100%;
  background-color: var(--black-02);
  margin: 16px 0
}

.priceCnt {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.discount {
  color: var(--black-05);
  font-size: 16px;
  font-weight: 700;
  position: relative;

  &:after {
    content: '';
    position: absolute;
    left: 0;
    top: 12px;
    height: 1.5px;
    width: 100%;
    background-color: var(--black-05);
  }
}

.price {
  color: var(--black);
  font-size: 18px;
  font-weight: 700;
}

@media(max-width: 950px) {
  .discount {
    font-size: 15px;
  }

  .imgCnt {
    max-height: 175px;
  }

  .price {
    font-size: 16px;
  }
}

@media(max-width: 856px) {
  .listItem {
    flex: 1 1 calc(207px - 16px);
  }

  .discount {
    font-size: 13px;
  }

  .price {
    font-size: 14px;
  }

  .divider {
    margin: 8px 0
  }
}

@media(max-width: 751px) {
  .discount {
    font-size: 12px;

    &:after {
      top: 9px;
      height: 1px;
      width: 100%;
      background-color: var(--black-05);
    }
  }
}

@media(max-width: 469px) {
  .listItem {
    flex: 1 1 calc(187px - 16px);
  }

  .name {
    font-size: 13px;
    margin-top: 5px;
    line-height: 15px;
  }

  .imgCnt {
    max-height: 145px;
  }

  .discount {
    font-size: 12px;
  }

  .price {
    font-size: 13px;
  }
}

